[package]
name = "candle-rotary"
version = "0.0.1"
edition = "2021"

description = "Rotary layer for the candle ML framework."
keywords = ["tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
candle = { version = "^0.3", package = "candle-core", features = ["cuda"]}
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = { path = "../bindgen_cuda" }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-nn = { version = "0.3.0", features = ["cuda"] }
